Fixed app not working on iOS.

--- a/Kowloon/wwwroot/style.css
+++ b/Kowloon/wwwroot/style.css
@@ -75,4 +75,5 @@ button.selected, input.selected {
     background: gray;
     width: 1em;
     height: 1em;
+    cursor: pointer;
 }
